# SVCAM

./: README.md  init.sh
cases/convert_ptcloud/: CMakeLists.txt
cases/convert_ptcloud/config/: config.yaml
cases/convert_ptcloud/src/: main.cpp
cases/detector_blob/: CMakeLists.txt
cases/detector_blob/config/: config.yaml
cases/detector_blob/src/: main.cpp
cases/face_recognition/: CMakeLists.txt
cases/face_recognition/config/: config.yaml
cases/face_recognition/src/: main.cpp
cases/recognition_object/: CMakeLists.txt
cases/recognition_object/config/: config.yaml
cases/recognition_object/src/: main.cpp
cases/test_laser/: CMakeLists.txt
cases/test_laser/config/: config.yaml
cases/test_laser/src/: main.cpp
libs/applied_robotics-libtconfig-180423/: readme.txt
libs/applied_robotics-libtconfig-180423/include/tconfig/: tconfig_param.h
libs/applied_robotics-libtconfig-180423/msvc/: libtconfig.filters  libtconfig.sln  libtconfig.vcxproj
libs/applied_robotics-libtlive-180423/: CMakeLists.txt  CMakeLists.txt.save  readme.txt
libs/applied_robotics-libtlive-180423/cmake/: FindZeroMQ.cmake
libs/applied_robotics-libtlive-180423/include/tlive/: tlive_stream.h  tlive_stream_client.h
libs/applied_robotics-libtlive-180423/msvc/: libtlive.sln  libtlive.vcxproj  libtlive.vcxproj.filters
libs/applied_robotics-libtlive-180423/src/: CMakeLists.txt  tlive_client.cpp
libs/dxlSlaveLib/: CMakeLists.txt  README.md
libs/dxlSlaveLib/cmake/: DxlSlaveConfig.cmake.in
libs/dxlSlaveLib/examples/: dxlSlaveTest.cpp
libs/dxlSlaveLib/src/: dxlSlave.cpp  dxlSlave.h
libs/dxlSlaveService/: config.json  dxlSlave.service  install_service.sh
libs/trackingcam3d_reader/: CMakeLists.txt  README.md
libs/trackingcam3d_reader/cmake/: trackingcam3d_readerConfig.cmake.in
libs/trackingcam3d_reader/examples/: main.cpp
libs/trackingcam3d_reader/include/trackingcam3d_reader/: MyDepthIllustrator.h  MyFpsMeter.h  TrackingCam3d_Client.h  TrackingCam3d_Reader.h
libs/trackingcam3d_reader/src/: MyDepthIllustrator.cpp  MyFpsMeter.cpp  TrackingCam3d_Reader.cpp
